2005-11-07  Atsushi Enomoto <atsushi@ximian.com>

	* XmlAttribute.cs : added new overrides in 2.0 RTM (this scarcely
	  makes sense without real optimization though).
	* XmlDocument.cs, XmlElement.cs, XmlNode.cs : avoid ChildNodes and
	  save extra XmlNodeList creation cost.

2005-11-07  Atsushi Enomoto <atsushi@ximian.com>

	* XmlNamespaceManager.cs : NameTable is virtual in 2.0 RTM.
	* XmlReader.cs : IsEmptyElement is reverted to be abstract in 2.0 RTM.
	  ReadTypedValue() is removed.
	* XmlValidatingReader.cs : ReadTypedValue() is not virtual now.
	* XmlWriter.cs : Settings is virtual.

2005-10-23  Atsushi Enomoto <atsushi@ximian.com>

	* XmlDocumentNavigator.cs : now MoveToFirst() invokes internal
	  MoveToFirstImpl().

2005-10-23  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextWriter.cs : oops, so WriteState.Error is NET_2_0 only.

2005-10-23  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextWriter.cs : (Error state check) actually I need to set Error.

2005-10-23  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextWriter.cs : throw InvalidOperationException if any of
	  WriteBlah() methods were invoked at error state.

2005-10-23  Atsushi Enomoto <atsushi@ximian.com>

	* XmlTextReader.cs, DTDValidatingReader.cs : LookupNamespace("") for
	  default namespace was returning "" instead of null. It didn't check
	  empty namespace URI for non-empty prefixes.

2005-10-07  Joshua Tauberer <tauberer@for.net>

	* XmlTextReader.cs: SkipTextDeclaration would not accept processing
	instructions that began with the string 'xml', e.g. rejecting
	'xml-stylesheet'.

2005-10-08  Gert Driesen <drieseng@users.sourceforge.net>

	* XmlAttribute.cs: InnerText and InnerXml do not override getters in
	NET_2_0. Removed extra CLSCompliant attribute on SchemaInfo.
	* XmlReaderSettings.cs: Marked sealed.

2005-10-04  Atsushi Enomoto <atsushi@ximian.com>

	* XmlConvert.cs : ToTimeSpan() resulted in an infinite loop when the
	  digits for "second" were not exactly 3. Fixed bug #76328.
