@@ -69,6 +69,11 @@ namespace System.Xml
 			set { Data = value; }
 		}
 
+#if NET_2_0
+		public override XmlNode ParentNode {
+			get { return base.ParentNode; }
+		}
+#endif
 		#endregion
 
 		#region Methods
