@@ -67,6 +67,12 @@ namespace System.Xml
 			}
 		}
 
+#if NET_2_0
+		public override XmlNode ParentNode {
+			get { return base.ParentNode; }
+		}
+#endif
+
 		// Methods
 		public override XmlNode CloneNode (bool deep)
 		{
